--- a/checker_app/templates/index.html
+++ b/checker_app/templates/index.html
@@ -12,36 +12,40 @@
     <div class="row justify-content-center">
         <div class="col-11">
             <h2 class="mt-5 mb-3">URL Status Checker</h2>
-            <table class="table" id="urls">
-                <tr>
-                    <th scope="col" style="width: 50%">URL</th>
-                    <th scope="col" style="width: 20%">Check interval</th>
-                    <th scope="col" style="width: 30%">Pause / Resume check</th>
-                </tr>
-                <tbody>
-                {% for url in urls %}
-                    <tr id="{{ url.id }}">
-                        <td style="width: 50%">
-                            <a href="{{ url.text }}">{{ url.text }}</a>
-                        </td>
-                        <td style="width: 20%">
-                            <p>{{ url.check_interval }} sec</p>
-                        </td>
-                        <td style="width: 30%">
-                            <button id="button_{{ url.id }}" data-url-id="{{ url.id }}"
-                                    type="button"
-                                    class="btn btn-primary btn-block pauseSwitcher">
-                                {% if url.is_paused %}
-                                    resume check
-                                {% else %}
-                                    pause check
-                                {% endif %}
-                            </button>
-                        </td>
+            {% if urls %}
+                <table class="table" id="urls">
+                    <tr>
+                        <th scope="col" style="width: 50%">URL</th>
+                        <th scope="col" style="width: 20%">Check interval</th>
+                        <th scope="col" style="width: 30%">Pause / Resume check</th>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+                    <tbody>
+                    {% for url in urls %}
+                        <tr id="{{ url.id }}">
+                            <td style="width: 50%">
+                                <a href="{{ url.text }}">{{ url.text }}</a>
+                            </td>
+                            <td style="width: 20%">
+                                <p>{{ url.check_interval }} sec</p>
+                            </td>
+                            <td style="width: 30%">
+                                <button id="button_{{ url.id }}" data-url-id="{{ url.id }}"
+                                        type="button"
+                                        class="btn btn-primary btn-block pauseSwitcher">
+                                    {% if url.is_paused %}
+                                        resume check
+                                    {% else %}
+                                        pause check
+                                    {% endif %}
+                                </button>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <h3>Add some urls at <a href="http://localhost:8000/admin">admin</a></h3>
+            {% endif %}
         </div>
     </div>
 </div>
@@ -78,7 +82,6 @@
     };
 
     function checkURL(url_id) {
-        console.log("checkURL ", url_id);
         $.ajax({
             url: 'ajax/check_url',
             type: 'post',
@@ -132,7 +135,6 @@
                         removeURL(data.url_id);
                         return
                     }
-                    console.log(data);
                     if (data.status === "resume") {
                         $(this).html("resume check");
                     } else if (data.status === "pause") {
